<resources>
    <string name="app_name">Buttons</string>
    <string name="puppy"></string>
    <string name="on">Button state on</string>
    <string name="off">Button state off</string>
    <string name="text">Text is now visible, at button on</string>
    <string name="switchedON">Turned on</string>
    <string name="switchedOFF">Turned off</string>
    <string name="content" />
    <string name="texty">ON</string>
    <string name="next">Next</string>
    <string name="puuvili">vali oma lemmik puuvili</string>
    <string name="terms">Kui teed linnukese siia kasti siis toimub midagi</string>
    <string name="agree">Nõustun tingimustega</string>
    <string name="music">mängi muusikat</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>

</resources>
