<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opilane.buttons.ButtonsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:id="@+id/toggleButton"
            android:onClick="changeState"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textView1"
            android:text="@string/text"
            android:visibility="invisible"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchButton"
            android:textOn="@string/switchedON"
            android:textOff="@string/switchedOFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textView2"
            android:text=""
            android:visibility="invisible"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:id="@+id/image"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/kitties"
            android:onClick="changePicture"
            android:contentDescription="@string/content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPanel"
            android:layout_gravity="center_horizontal"
            android:text="@string/texty"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:onClick="nextPage" />

    </LinearLayout>

</ScrollView>
